# graphwiz-xr

./: .editorconfig  .env.example  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  .rustfmt.toml  AGENTS.md  AGENT_LOOPER_ALL_RETICULUM_SERVICES_COMPLETE.md  AGENT_LOOPER_FINAL_SUMMARY.md  AGENT_LOOPER_INTEGRATION_COMPLETE.md  AGENT_LOOPER_RETICULUM_INTEGRATION.md  AGENT_LOOPER_TEST_RESULTS.md  ALL_TESTS_PASSING.md  ANALYTICS_IMPLEMENTATION.md  AVATAR_TESTING_GUIDE.md  COMPREHENSIVE_ANALYSIS.md  CONTROLLER_MODELS_IMPLEMENTATION.md  Cargo.toml  DEPLOYMENT_STATUS_FINAL.md  DEPLOYMENT_SUMMARY_2026-01-01.md  E2E_TEST_RESULTS.md  FULL_STACK_INTEGRATION_TEST_REPORT.md  FUTURE_ANALYSIS_IDEAS.md  GENERATE_SECRETS.md  HUB_SERVICE_INTEGRATION_TEST_RESULTS.md  IMPLEMENTATION_STATUS_REPORT.md  INTENTION.md  LICENSE  MOVEMENT_FIX_SUMMARY.md  MULTIPLAYER_MOVEMENT_TEST_RESULTS.md  MULTI_CLIENT_AVATAR_TEST.md  NETWORKED_AVATAR_SYNC_COMPLETE.md  NETWORKING_IMPLEMENTATION_SUMMARY.md  PASSWORDS.txt  PHYSICS_ENGINE_INTEGRATION.md  PHYSICS_TEST_REPORT.md  PRODUCTION_TEST_RESULTS.md  PROJECT_ENHANCEMENT_SUMMARY.md  PROTOBUF_ES6_FIX.md  (+44 more)
.github/workflows/: README.md  build.yml  ci.yml  docker.yml  e2e-production-tests.yml  e2e.yml  quality.yml  release.yml  rust.yml  test.yml  typescript.yml
.opencode/: oh-my-opencode.json
.qa/: COGNITIVE_QA_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MUTATION_TESTING_RESULTS.md  TESTING_IMPROVEMENTS_SUMMARY.md  demo-report.json  demo.cjs  mutation-testing-report.json  package.json  run-all-mutation-tests.cjs  tsconfig.json
.qa/agents/: qa-agent.ts
.qa/prompts/: multi-step-workflow.yaml  personas.yaml
.qa/rag/: requirement-indexer.ts
.qa/validators/: mutation-tester.ts  validation-pipeline.ts
.sisyphus/: boulder.json  ralph-loop.local.md
.sisyphus/drafts/: graphwiz-xr-default-scene-testing.md  neo4j-mcp-integration.md
.sisyphus/evidence/: task-5-emoji-picker.md
.sisyphus/plans/: graphwiz-xr-default-scene-testing.md
docs/:  GestureRecognition Implementation Plan.md  API.md  COGNITIVE_QA_INTEGRATION.md  INTENTION.md  STATUS-refactoring-2026-03-13.md  STATUS-refactoring-comprehensive.md  XR_GESTURE_INTEGRATION_ANALYSIS.md  any-justifications.md  arc42.md  e2e-bug-fixes.md  e2e-test-coverage-report.md  e2e-test-execution.md  e2e-test-report-2026-03-15.md  spoke-editor-architecture.md  test-coverage-report.md
docs/ci-cd/: CI_CD_SETUP_COMPLETE.md
docs/implementation/: AGENT_LOOPER_INTEGRATION.md  AGENT_LOOPER_QUICKSTART.md  AGENT_LOOPER_RETICULUM_COMPLETE.md  AGENT_LOOPER_SUMMARY.md  AUTH_SERVICE_INTEGRATION_COMPLETE.md  AVATAR_CONFIGURATOR_COMPLETE.md  AVATAR_SYSTEM_COMPLETE_FINAL.md  AVATAR_SYSTEM_IMPLEMENTATION.md  AVATAR_TESTING_GUIDE.md  BACKEND_BUILD_ISSUE.md  COMPLETE_RETICULUM_INTEGRATION_ALL_FOUR_SERVICES.md  DEPLOYMENT_STATUS_FINAL.md  DEPLOYMENT_SUCCESS_FINAL.md  DEPLOYMENT_SUMMARY_2026-01-01.md  (+39 more)
scripts/: integrate-moderation-panel.js
tests/: load-test.cjs
traefik/: dynamic.yml  traefik.yml
(+17 files in other folders)
